[package]
name = "librobotcontrol-sys"
version = "0.4.0"
authors = ["Yusuf Simonson <simonson@gmail.com>"]
edition = "2021"
description = "Rust port of librobotcontrol"
repository = "https://github.com/ysimonson/librobotcontrol-sys"
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "librobotcontrol_sys"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
libc = "0.2"

[dev-dependencies]
signal-hook = "0.3.15"
